MK LOGO Masking

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>MK Landing Page</title>
   </head>
   <body>
     <div class="circle"></div>
-    <div class="background"></div>
+    <div class="background">
+      <div class="logo-wrapper">
+        <h1 class="logo">MK</h1>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
