All elements are placed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Playfair+Display:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -18,6 +22,26 @@
       <div class="logo-wrapper">
         <h1 class="logo">MK</h1>
       </div>
+
+      <div class="white-strip">
+        <div class="black-card">
+          <p class="content">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+            sapiente quia vitae eaque, accusantium omnis eveniet! Ea sapiente
+            omnis dolor debitis tempora nulla, quae pariatur, esse voluptate
+            alias consequuntur nihil maxime quia voluptas odio quod porro
+            placeat expedita impedit obcaecati.
+          </p>
+        </div>
+
+        <div class="white-content">
+          <h4 class="email">mehdialikadiwala@gmail.com</h4>
+          <div class="line"></div>
+          <i class="ri-arrow-right-circle-fill icon"></i>
+        </div>
+      </div>
+
+      <h5 class="side-text">Mehdiali Kadiwala</h5>
     </div>
 
     <script src="script.js"></script>
